# simple-database

./: .gitignore  CMakeLists.txt  README.md
scripts/: Dockerfile  build_docker_image.sh  gpt_git_commit.sh  run_docker_container.sh
src/: cmd_functions.c  cmd_functions.h  database.c  database.h  db_config.h  helper_functions.c  helper_functions.h  inputs.c  inputs.h  main.c  main.h  operator.c  operator.h  parser.c  parser.h  prompt.c  prompt.h  rpn.c  rpn.h  table.h  test_fn_env.c  test_fn_env.h
tests/: CMakeLists.txt  io_redirect.h  stdin_redirect.h  tests_check_command.cpp  tests_helper_function.cpp  tests_rpn.cpp
